# ROS-UR10-kinematics

./: LICENSE  README.md  assignment5.ttt  report5.docx
ros-ws/: readme
ros-ws/devel/: .catkin  .rosinstall  setup.sh
ros-ws/devel/include/vrep_common/: ForceSensorData.h  JointSetStateData.h  ObjectGroupData.h  ProximitySensorData.h  ScriptFunctionCallData.h  VisionSensorData.h  VisionSensorDepthBuff.h  VrepInfo.h  simRosAddStatusbarMessage.h  simRosAddStatusbarMessageRequest.h  simRosAddStatusbarMessageResponse.h  simRosAppendStringSignal.h  simRosAppendStringSignalRequest.h  simRosAppendStringSignalResponse.h  simRosAuxiliaryConsoleClose.h  simRosAuxiliaryConsoleCloseRequest.h  simRosAuxiliaryConsoleCloseResponse.h  simRosAuxiliaryConsoleOpen.h  simRosAuxiliaryConsoleOpenRequest.h  simRosAuxiliaryConsoleOpenResponse.h  simRosAuxiliaryConsolePrint.h  simRosAuxiliaryConsolePrintRequest.h  simRosAuxiliaryConsolePrintResponse.h  simRosAuxiliaryConsoleShow.h  simRosAuxiliaryConsoleShowRequest.h  simRosAuxiliaryConsoleShowResponse.h  simRosBreakForceSensor.h  simRosBreakForceSensorRequest.h  simRosBreakForceSensorResponse.h  simRosCallScriptFunction.h  simRosCallScriptFunctionRequest.h  simRosCallScriptFunctionResponse.h  simRosClearFloatSignal.h  simRosClearFloatSignalRequest.h  simRosClearFloatSignalResponse.h  simRosClearIntegerSignal.h  (+263 more)
ros-ws/src/ur10_kinematics/: CMakeLists.txt  package.xml
ros-ws/src/vrep_stack/vrep_teleop/: CMakeLists.txt
ros-ws/src/vrep_stack/vrep_teleop/launch/: teleop_joy.launch
ros-ws/src/vrep_stack/vrep_teleop/src/: diff_joy_control.cpp
(+421 files in other folders)
